test/seq/cmdlists/invalid_ttlall_space.err
SyntaxError: Expecting space after TTL value
Line: 3, Column: 10
ttl=0x234t
         ^
